# zero2prod

./: .envrc  Cargo.toml  Dockerfile
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20241126020829_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
